<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ activity_credits.xml
  ~
  ~ Created on: 9 /8 /2013
  ~
  ~ Copyright (c) 2013 Ziji Wang and University of St. Andrews. All Rights Reserved.
  ~ This software is the proprietary information of University of St. Andrews.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#fffacd">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:scrollbars="vertical"
            android:layout_gravity="center|top">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title_1"
                    android:id="@+id/textView"
                    android:textColor="#e2511c"
                    android:paddingTop="40dp"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg1"
                    android:id="@+id/textView2"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title2"
                    android:id="@+id/textView3"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg2"
                    android:id="@+id/textView4"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title3"
                    android:id="@+id/textView5"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text=""
                    android:id="@+id/textView6"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title4"
                    android:id="@+id/textView7"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg4"
                    android:id="@+id/textView8"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title5"
                    android:id="@+id/textView9"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg5"
                    android:id="@+id/textView10"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg6"
                    android:id="@+id/textView11"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title6"
                    android:id="@+id/textView12"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg7"
                    android:id="@+id/textView13"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg8"
                    android:id="@+id/textView14"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title7"
                    android:id="@+id/textView15"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg7"
                    android:id="@+id/textView16"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg9"
                    android:id="@+id/textView17"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title8"
                    android:id="@+id/textView18"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg10"
                    android:id="@+id/textView19"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg11"
                    android:id="@+id/textView20"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title9"
                    android:id="@+id/textView21"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg12"
                    android:id="@+id/textView22"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg13"
                    android:id="@+id/textView23"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title9"
                    android:id="@+id/textView24"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg12"
                    android:id="@+id/textView25"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg13"
                    android:id="@+id/textView26"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title10"
                    android:id="@+id/textView27"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg5"
                    android:id="@+id/textView28"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg14"
                    android:id="@+id/textView29"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/credits_title11"
                    android:id="@+id/textView30"
                    android:paddingTop="40dp"
                    android:textColor="#e2511c"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg5"
                    android:id="@+id/textView31"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/credits_msg15"
                    android:id="@+id/textView32"
                    android:textColor="#1a1a1a"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"/>
        </LinearLayout>
    </ScrollView>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quitCDImageButton"
            android:background="@drawable/quit_button_action"
            android:layout_gravity="left|top"/>
</FrameLayout>