<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ activity_setting.xml
  ~
  ~ Created on: 28 /7 /2013
  ~
  ~ Copyright (c) 2013 Ziji Wang and University of St. Andrews. All Rights Reserved.
  ~ This software is the proprietary information of University of St. Andrews.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#fffacd">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/soundImageButton"/>
        </FrameLayout>

        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/handedness"
                    android:clickable="true"
                    android:id="@+id/handednessTextView"
                    android:textColor="#e2511c"/>
        </FrameLayout>

        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/handednessCheckbox"
                android:visibility="gone">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    >

                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rightHand"
                        android:id="@+id/rightCheckBox"
                        android:textColor="#1d130b"
                        android:checked="false"
                        android:textSize="20sp"/>

                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leftHand"
                        android:id="@+id/leftCheckBox"
                        android:textColor="#1d130b"
                        android:textSize="20sp"/>

                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/handAuto"
                        android:id="@+id/autoCheckBox"
                        android:textColor="#1d130b"
                        android:textSize="20sp"/>
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial"
                    android:id="@+id/tutorialTextView"
                    android:clickable="true"
                    android:textColor="#e2511c"/>
        </FrameLayout>

        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credits"
                    android:id="@+id/creditsTextView"
                    android:clickable="true"
                    android:textColor="#e2511c"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            >

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/quit_button_action"
                android:id="@+id/backButton"
                />
    </LinearLayout>

</FrameLayout>